sumo/tests/traci/StopNode/InvalidNode/testclient_out.traci
TraCITestClient output file. Date: Mon Feb 23 14:50:17 2009


-> Command sent: <SimulationStep>:
  TargetTime=1 PosFormat=1
.. Command acknowledged (1), [description: ]
.. Received Response <MoveNode>:
  nodeId=0 targetTime=1 2D-Position: x=0 y=498.35

-> Command sent: <StopNode>:
  NodeId=-1 Position-2D: x=0 y=0 radius=0 waitTime=0
.. Answered with error to command (18), [description: Can not retrieve node with given ID]

-> Command sent: <SimulationStep>:
  TargetTime=1 PosFormat=1
.. Command acknowledged (1), [description: ]
.. Received Response <MoveNode>:
  nodeId=0 targetTime=1 2D-Position: x=0.8 y=498.35

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
